fix error align in form field

--- a/src/modules/common/components/FormField/index.less
+++ b/src/modules/common/components/FormField/index.less
@@ -4,6 +4,7 @@
 .form-field {
     &__error-container {
         color: @red;
+        text-align: left;
         visibility: hidden;
 
         &_show {
